--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -14,4 +14,9 @@
     <string name="goWeb">Go to Web version</string>
     <string name="TestButton">Get Something!</string>
     <string name="NewGuy">A new guy? Come here\n for sign up and join us!</string>
+    <string name="VersionName">TourPlan-Alpha_v0.6</string>
+    <string name="User_dogman">g10049013@thu.edu.tw</string>
+    <string name="Pass_dogman">vansttt</string>
+    <string name="User_Brack">brack.clare@gmail.com</string>
+    <string name="Pass_Brack">dagger</string>
 </resources>
